# artifaq

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  v1-plan.html
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop.yml  preview.yml
apps/desktop/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: build-latest-json.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: dialog.rs  mod.rs  walk.rs  watch.rs
apps/desktop/src/components/: EmptyState.tsx  FolderTree.tsx  KeyboardHelp.tsx  MainView.tsx  Sidebar.tsx  Titlebar.tsx  Toast.tsx
apps/desktop/src/hooks/: useToast.ts
apps/desktop/src/lib/: clipboard.ts  format.test.ts  format.ts  id.ts  ipc.ts  notify.ts  (+2 more)
apps/web/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: _headers  _routes.json
apps/web/src/: App.tsx  index.css
apps/worker/: .dev.vars.example  README.md  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
apps/worker/src/: index.ts  types.ts
apps/worker/test/: env.d.ts  publish.test.ts
(+29 files in other folders)
